<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:background="@drawable/background"

    tools:context=".RegActivity1">



    <TextView

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:id="@+id/signuptitle"

        android:text="@string/sign_up"

        android:textSize="35sp"

        android:textStyle="bold"

        android:textColor="@color/white"

        android:gravity="center"

        android:layout_margin="20dp"/>


    <EditText

        android:id="@+id/username"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_below="@id/signuptitle"

        android:layout_marginStart="10dp"

        android:layout_marginTop="10dp"

        android:layout_marginEnd="10dp"

        android:layout_marginBottom="10dp"

        android:background="#30ffffff"

        android:drawableStart="@drawable/ic_baseline_person_outline_24"

        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="#000000"
        android:autofillHints=""
        android:inputType="text" />



    <EditText

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:id="@+id/email"

        android:layout_below="@id/username"

        android:background="#30ffffff"

        android:hint="@string/email"

        android:textColorHint="@color/white"

        android:textColor="@color/white"

        android:layout_margin="10dp"

        android:padding="20dp"

        android:drawableStart="@drawable/ic_baseline_email_24"

        android:drawablePadding="20dp"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <EditText

        android:id="@+id/password"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_below="@id/email"

        android:layout_marginStart="10dp"

        android:layout_marginTop="10dp"

        android:layout_marginEnd="10dp"

        android:layout_marginBottom="10dp"

        android:background="#30ffffff"

        android:drawableStart="@drawable/ic_baseline_info_24"

        android:drawablePadding="20dp"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:autofillHints="" />

    <EditText

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:id="@+id/repassword"

        android:layout_below="@id/password"

        android:background="#30ffffff"

        android:hint="@string/re_password"

        android:textColorHint="@color/white"

        android:textColor="@color/white"

        android:layout_margin="10dp"

        android:padding="20dp"

        android:drawableStart="@drawable/ic_baseline_info_24"

        android:drawablePadding="20dp"

        android:inputType="textPassword"
        android:autofillHints="" />



    <com.google.android.material.button.MaterialButton

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:id="@+id/signupbtn"

        android:text="@string/register"

        android:textSize="25sp"

        android:layout_below="@id/repassword"

        android:layout_centerHorizontal="true"

        android:backgroundTint="@color/design_default_color_secondary"

        android:layout_margin="15dp"/>



    <TextView

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:id="@+id/info"

        android:layout_above="@id/socialicons"

        android:text="@string/or_sign_up_with"

        android:layout_centerHorizontal="true"/>



    <LinearLayout

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:id="@+id/socialicons"

        android:gravity="center"

        android:layout_alignParentBottom="true">



        <ImageView

            android:layout_width="48dp"

            android:layout_height="48dp"

            android:layout_margin="20dp"

            android:src="@drawable/google"
            android:contentDescription="@string/HD" />

        <ImageView

            android:layout_width="48dp"

            android:layout_height="48dp"

            android:layout_margin="20dp"

            android:src="@drawable/fb"
            android:contentDescription="@string/todHD" />

        <ImageView

            android:layout_width="48dp"

            android:layout_height="48dp"

            android:layout_margin="20dp"

            android:contentDescription="@string/todo"
            android:src="@drawable/twitter"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>







</RelativeLayout>



